# splinter

./: Cargo.toml  README.md
.github/workflows/: rust.yml
libs/splinter-animation/: Cargo.toml
libs/splinter-animation/src/: config.rs  easing.rs  lerp.rs  lib.rs  manager.rs
libs/splinter-event/: Cargo.toml
libs/splinter-event/src/: lib.rs
libs/splinter-icon/: Cargo.toml
libs/splinter-icon/src/: codepoints  lib.rs
src/: colors.rs  icons.rs  main.rs  progress.rs
src/data/: mod.rs
src/data/modpack/: loader.rs  metadata.rs  mod.rs
src/data/plugin/: metadata.rs  mod.rs  status.rs
src/plugin/: manager.rs  mod.rs
src/prog/: mod.rs  spinner.rs
src/ui/: color.rs  icon.rs  mod.rs
src/ui/progress/: mod.rs  spinner.rs
src/view/: header.rs  mod.rs
src/view/home/: mod.rs
src/view/search/: mod.rs
