[package]
name = "splinter"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
splinter-icon = { path = "libs/splinter-icon" }
splinter-animation = { path = "libs/splinter-animation" }
splinter-event = { path = "libs/splinter-event" }

dirs = "5.0"
tracing = "0.1"
tracing-subscriber = "0.3"

rfd = { version = "0.14", default-features = false, features = ["xdg-portal", "async-std"] }
eframe = { version = "0.27" }
zip = "2.1"
rand = "0.8"
crossbeam = "0.8"
image = { version = "0.25", features = ["png"] }
serde = "1.0"
serde_json = "1.0"


[profile.dev]
opt-level = 1

[workspace]
members = [
    "libs/splinter-event",
    "libs/splinter-icon",
    "libs/splinter-animation"
]