[package]
name = "splinter-animation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
serde = { version = "1", features = ["derive"] }
egui = "0.27"

parking_lot = "0.12"
ahash = "0.8"
palette = "0.7"

